--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+* {
+    margin: auto;
+}
+
 body {
     background-color: cadetblue;
+}
+
+#biglogo {
+    display: block;
+    width: 50%;
+    padding-top: 10vh;
+}
+
+#box {
+    background-color: gray;
+    width: 15vw;
+    height: 15vh;
 }
