--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ body {
     display: block;
     width: 50%;
     padding-top: 10vh;
+    padding-bottom: 80px;
 }
 
 #box {
     background-color: gray;
-    width: 15vw;
-    height: 15vh;
+    width: 70vw;
+    height: 20vh;
 }
