--- a/style.css
+++ b/style.css
@@ -24,4 +24,12 @@ body {
     font-family: "Lucida Console", "Courier New", monospace;
     font-size: 15px;
     text-align: center;
+    padding-top: 15px;
+    padding-bottom: 10px;
+}
+
+.littlechoice {
+    display: none;
+    padding: 32px 32px;
+    background-color: #FFD464;
 }
