--- a/style.css
+++ b/style.css
@@ -27,9 +27,15 @@ body {
     padding-top: 15px;
     padding-bottom: 10px;
 }
+#choices {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .littlechoice {
     display: none;
-    padding: 32px 32px;
+    margin: 0;
+    padding: 16px;
     background-color: #FFD464;
 }
