--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     padding-top: 15px;
     padding-bottom: 10px;
 }
+
 #choices {
     display: flex;
     align-items: center;
@@ -37,5 +38,7 @@ body {
     display: none;
     margin: 0;
     padding: 16px;
+    margin-left: 1vw;
+    margin-right: 1vw;
     background-color: #FFD464;
 }
